<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>

	<name>XSK - Parent</name>
	<description>XSK - HANA XS Classic Compatibility Environment</description>
	<groupId>com.sap.xsk</groupId>
	<artifactId>xsk-parent</artifactId>
	<version>0.14.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<inceptionYear>2019</inceptionYear>

	<url>http://www.sap.com</url>
	<organization>
		<name>SAP SE</name>
		<url>http://www.sap.com</url>
	</organization>
	<scm>
		<url>https://github.com/SAP/xsk</url>
	</scm>

	<modules>
		<module>modules</module>
		<module>resources</module>
		<module>releng</module>
	</modules>

	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>${maven.compiler.plugin.version}</version>
						<configuration>
							<source>${maven.compiler.source}</source>
							<target>${maven.compiler.target}</target>
							<debug>true</debug>
							<debuglevel>lines,vars,source</debuglevel>
						</configuration>
					</plugin>
					<!-- <plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.2.0</version>
						<configuration>
							<source>${java.version}</source>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
						<configuration> <failOnError>false</failOnError> </configuration>
						<dependencies>
							<dependency>
								<groupId>org.apache.commons</groupId>
								<artifactId>commons-lang3</artifactId>
								<version>${commons.lang3}</version>
							</dependency>
						</dependencies>
					</plugin> -->

				</plugins>
			</build>
		</profile>
		<profile>
			<id>itests</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<modules>
				<module>integration-tests</module>
			</modules>
		</profile>
		<profile>
			<id>license</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>com.mycila</groupId>
						<artifactId>license-maven-plugin</artifactId>
						<version>${license-maven-plugin.version}</version>
						<inherited>true</inherited>
						<configuration>
							<header>${license.header.location}</header>
							<aggregate>true</aggregate>
							<properties>
								<inceptionYear>${project.inceptionYear}</inceptionYear>
								<currentYear>${currentYear}</currentYear>
							</properties>
							<includes>
								<include>src/**/*.java</include>
								<include>src/**/*.xml</include>
								<include>src/**/*.js</include>
							</includes>
							<excludes>
								<exclude>**/logback.xml</exclude>
								<exclude>**/logback-test.xml</exclude>
								<exclude>**/src/test/resources/**</exclude>
								<exclude>resources/resources-neo-sdk/**</exclude>
							</excludes>
						</configuration>
						<dependencies>
							<dependency>
								<groupId>com.mycila</groupId>
								<artifactId>license-maven-plugin-git</artifactId>
								<version>${license-maven-plugin.version}</version>
							</dependency>
						</dependencies>
						<executions>
							<execution>
								<id>format-license</id>
								<phase>initialize</phase>
								<goals>
									<goal>format</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>${maven.compiler.plugin.version}</version>
						<configuration>
							<source>${maven.compiler.source}</source>
							<target>${maven.compiler.target}</target>
							<debug>true</debug>
							<debuglevel>lines,vars,source</debuglevel>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>content</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<maven.test.skip>true</maven.test.skip>
			</properties>
			<build>
				<finalName>${project.artifactId}</finalName>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-clean-plugin</artifactId>
						<version>${maven.clean.plugin.version}</version>
						<configuration>
							<filesets>
								<fileset>
									<directory>${maven.clean.plugin.directory}</directory>
								</fileset>
							</filesets>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-scm-plugin</artifactId>
						<version>${maven.scm.plugin.version}</version>
						<configuration>
							<goals>checkout</goals>
							<checkoutDirectory>${content.scm.checkoutDirectory}</checkoutDirectory>
							<connectionUrl>${content.scm.connection}</connectionUrl>
							<developerConnectionUrl>${content.scm.developerConnection}</developerConnectionUrl>
							<server>${content.scm.server}</server>
							<scmVersion>${content.repository.branch}</scmVersion>
							<scmVersionType>branch</scmVersionType>
						</configuration>
						<executions>
							<execution>
								<id>generated-sources</id>
								<phase>${profile.content.phase}</phase>
								<goals>
									<goal>checkout</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<artifactId>maven-resources-plugin</artifactId>
						<version>${maven.resource.plugin.version}</version>
						<executions>
							<execution>
								<id>copy-content-resources</id>
								<phase>compile</phase>
								<goals>
									<goal>copy-resources</goal>
								</goals>
								<configuration>
									<outputDirectory>${content.output.directory}</outputDirectory>
									<resources>
										<resource>
											<directory>${content.source.directory}</directory>
										</resource>
									</resources>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

	</profiles>

	<properties>
		<project.title>XSK - Compatibility for HANA Extended Application Engine</project.title>

		<java.version>11</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<dirigible.version>6.1.21</dirigible.version>

		<maven.resource.plugin.version>3.2.0</maven.resource.plugin.version>
		<maven.clean.plugin.version>3.1.0</maven.clean.plugin.version>
		<maven.clean.plugin.directory>src/main/resources/META-INF/dirigible</maven.clean.plugin.directory>
		<maven.compiler.plugin.version>3.9.0</maven.compiler.plugin.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.scm.plugin.version>1.12.2</maven.scm.plugin.version>
		<commons.io>2.7</commons.io>
		<commons.codec>1.10</commons.codec>
		<cxf.version>3.1.11</cxf.version>
		<gson.version>2.8.9</gson.version>
    <scp-cf.version>3.62.0</scp-cf.version>
		<slf4j.version>1.7.35</slf4j.version>
		<slf4j.simple.version>1.7.12</slf4j.simple.version>
		<logback.version>1.2.10</logback.version>
		<com.h2database.version>2.1.210</com.h2database.version>
		<derby.version>10.12.1.1</derby.version>
		<activemq.version>5.14.5</activemq.version>
		<jsr250-api.version>1.0</jsr250-api.version>
		<jetty.version>9.4.12.v20180830</jetty.version>
		<lucene.version>7.0.1</lucene.version>
		<chemistry.version>1.1.0</chemistry.version>
		<flowable.version>6.3.0</flowable.version>
		<jaxb.version>2.3.0</jaxb.version>
		<jaxws.version>2.3.0</jaxws.version>
		<olingo.version>2.0.11</olingo.version>
		<mockito.version>4.3.1</mockito.version>
		<junit.version>4.13.2</junit.version>
		<junitparams.version>1.1.1</junitparams.version>
		<hamcrest.all.version>1.3</hamcrest.all.version>
		<retrofit.version>1.8.0</retrofit.version>
		<okhttp.version>2.7.5</okhttp.version>
		<xsuaa.client.version>2.2.0</xsuaa.client.version>
		<apache.httpclient.version>4.5.8</apache.httpclient.version>
		<commons.lang3>3.9</commons.lang3>
		<license-maven-plugin.version>4.2.rc2</license-maven-plugin.version>
		<antlr4-runtime.version>4.9.3</antlr4-runtime.version>
		<antlr4-maven-plugin.version>4.9.3</antlr4-maven-plugin.version>
		<selenium.version>4.1.2</selenium.version>
		<selenium.webdriver.manager.version>5.0.3</selenium.webdriver.manager.version>
		<neo-java-web-sdk.version>4.8.9</neo-java-web-sdk.version>
    <neo-java-web-sdk.javax.activation.version>1.2.0</neo-java-web-sdk.javax.activation.version>
    <neo-java-web-sdk.jaxb.version>2.2.11</neo-java-web-sdk.jaxb.version>
		<ngdbc.version>2.11.14</ngdbc.version>
		<maven-dependency-plugin.version>3.2.0</maven-dependency-plugin.version>
		<commons-csv.version>1.9.0</commons-csv.version>
		<commons-dbcp2.version>2.9.0</commons-dbcp2.version>
		<javax.servlet-api.version>4.0.1</javax.servlet-api.version>
		<javax.websocket-api.version>1.1</javax.websocket-api.version>

		<profile.content.phase>none</profile.content.phase>

		<content.scm.url>https://github.com/dirigiblelabs/${content.repository.name}</content.scm.url>
		<content.scm.connection>scm:git:https://github.com/dirigiblelabs/${content.repository.name}.git</content.scm.connection>
		<content.scm.developerConnection>scm:git:https://github.com/dirigiblelabs/${content.repository.name}</content.scm.developerConnection>
		<content.repository.branch>main</content.repository.branch>

		<content.scm.server>github</content.scm.server>
		<content.scm.checkoutDirectory>target</content.scm.checkoutDirectory>
		<content.source.directory>target/${content.project.name}</content.source.directory>
		<content.output.directory>${basedir}/src/main/resources/META-INF/dirigible/${content.project.name}</content.output.directory>

		<license.header.location>licensing-header.txt</license.header.location>

	</properties>
</project>
